# tree-sitter-nim

./: .gitignore  .lvimrc  Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  grammar_bugs_to_report.md  grammar_bugs_to_report.txt  package-lock.json  package.json
examples/: ex  ex.nim
queries/: highlights.scm
queries/nvim/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.cc
test/: complex_statements.txt  declaration.txt  expr.txt  highlights.scm  literal.txt  misc.txt  operators.txt  primaries.txt  routines.txt  simple_statements.txt
test/corpus/: comments.txt  complex_statements.txt  constructors.txt  declaration.txt  declarations.txt  expr.txt  literal.txt  literals.txt  operators.txt  postExprBlocks.txt  primaries.txt  routines.txt  simple_statements.txt  statements.txt
